<resources>
    <string name="app_name">MESH</string>
    <string name="stay_connected">People Nearby. Real Conversations.</string>
    <string name="search_hint">Search...</string>
    <string name="story_add">Add</string>
    <string name="no_conversations">No conversations yet. Tap someone nearby to start chatting.</string>
    <string name="tap_to_chat">Tap to start a conversation</string>
    <string name="new_chat">New chat</string>
    <string name="open_chat">Open chat</string>
    <string name="legacy_console">Classic mesh console</string>
    <string name="subtitle">Discover and chat with people around you using local device connection.</string>
    <string name="node_id_hint">Your name / node ID</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="make_discoverable">Make Discoverable</string>
    <string name="discover_peers">Find classic peers</string>
    <string name="start_listening">Start Mesh</string>
    <string name="update_from_github">Check update</string>
    <string name="discovered_peers">Classic peers</string>
    <string name="connect_selected_peer">Connect selected peer</string>
    <string name="active_connections">Mesh links</string>
    <string name="no_connections">No mesh links yet. Tap Start Mesh on both phones.</string>
    <string name="destination_hint">To (node ID)</string>
    <string name="message_hint">Message...</string>
    <string name="send_message">Send</string>
    <string name="send_button">Send</string>
    <string name="file_button">File</string>
    <string name="received_messages">Chat</string>
    <string name="no_messages_yet">No messages yet.</string>
    <string name="event_log">Diagnostics</string>
    <string name="mesh_idle">Nearby chat is off</string>
    <string name="signed_mesh">Nearby chat</string>
    <string name="show_setup">Settings</string>
    <string name="hide_setup">Hide settings</string>
    <string name="no_file_transfer">No file transfer</string>
    <string name="open_file">Open file</string>
    <string name="get_started">Get Started</string>
    <string name="nearby_title">Nearby</string>
    <string name="nearby_subtitle">People around you</string>
</resources>
